{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 350,
  "lineage": "09970860-1703-b206-d252-b4edfbce9c4f",
  "resources": [
    {
      "module": "module.global",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-24T22:06:23.587-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "spark-cluster-fw-allow-bastion",
            "name": "spark-cluster-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
            "priority": 1000,
            "project": "spark-cluster1-256809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/firewalls/spark-cluster-fw-allow-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.global",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-24T22:06:23.685-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "spark-cluster-fw-allow-http",
            "name": "spark-cluster-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
            "priority": 1000,
            "project": "spark-cluster1-256809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/firewalls/spark-cluster-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.global",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-24T22:06:23.844-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "spark-cluster-fw-allow-internal",
            "name": "spark-cluster-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
            "priority": 1000,
            "project": "spark-cluster1-256809",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/firewalls/spark-cluster-fw-allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.spark",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider.google",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191021",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/disks/master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "id": "master",
            "instance_id": "3149702229928127052",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "role": "master",
              "ssh_keys": "daeyeonjoo:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDtVM1ddPOWUDwwZByIn9OTl/un+mVZHLtk4qp8KU6sI7HtgJZ6dB00h1YPnITRmotuzD+8qttyQAeau+oPhuV5i0/dp95YpjRLG/aCRUnrSEZgPa/EwpqgkVwwth/YCK5T4tNT0xk+K4Fpj8yhlw2Dj7UmENb4/se8LIWLBG4ksd8E1W0rxkPJAzCKD4HswVCJFvMUd8/JZkXRVPRKt+YwNNSX9B+1paQ6alfq+SQQxLoGWs9j//DLD4GnDYbCzFBd8XL0QvrTOoKqJMfSIEhFhFI5kzB0ZGiAmX3n6zqGZHa0KkH7iJX5KbDKw+5J6aSMSQ3+HNMmJozkmVt1KSsX daeyeonjoo\n",
              "type": "spark"
            },
            "metadata_fingerprint": "iay1aZN5xKs=",
            "metadata_startup_script": "        wget http://apache.mirror.cdnetworks.com/spark/spark-2.4.4/spark-2.4.4-bin-hadoop2.7.tgz\n        tar -xzf spark-2.4.4-bin-hadoop2.7.tgz\n        mv spark-2.4.4-bin-hadoop2.7 ~/spark\n        rm spark-2.4.4-bin-hadoop2.7.tgz\n",
            "name": "master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.241.96.130",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
                "network_ip": "10.26.2.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/regions/asia-east2/subnetworks/spark-cluster-dev-public-net",
                "subnetwork_project": "spark-cluster1-256809"
              }
            ],
            "project": "spark-cluster1-256809",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/instances/master",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east2-b"
          },
          "depends_on": [
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.spark",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "slave",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191021",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/disks/slave-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "id": "slave-0",
            "instance_id": "9123403243561368577",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "index": "0",
              "role": "slave",
              "type": "spark"
            },
            "metadata_fingerprint": "SxET9S2bNlg=",
            "name": "slave-0",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
                "network_ip": "10.26.2.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/regions/asia-east2/subnetworks/spark-cluster-dev-public-net",
                "subnetwork_project": "spark-cluster1-256809"
              }
            ],
            "project": "spark-cluster1-256809",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/instances/slave-0",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east2-b"
          },
          "depends_on": [
            "google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191021",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/disks/slave-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "id": "slave-1",
            "instance_id": "8361592980030569473",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "index": "1",
              "role": "slave",
              "type": "spark"
            },
            "metadata_fingerprint": "9prdNJutJa0=",
            "name": "slave-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
                "network_ip": "10.26.2.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/regions/asia-east2/subnetworks/spark-cluster-dev-public-net",
                "subnetwork_project": "spark-cluster1-256809"
              }
            ],
            "project": "spark-cluster1-256809",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/zones/asia-east2-b/instances/slave-1",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-east2-b"
          },
          "depends_on": [
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.global",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "spark-cluster-dev-vpc",
            "name": "spark-cluster-dev-vpc",
            "project": "spark-cluster1-256809",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc"
          }
        }
      ]
    },
    {
      "module": "module.spark",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-24T22:06:23.984-07:00",
            "enable_flow_logs": false,
            "fingerprint": "PGAj3MfgLsk=",
            "gateway_address": "10.26.2.1",
            "id": "asia-east2/spark-cluster-dev-public-net",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "spark-cluster-dev-public-net",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/global/networks/spark-cluster-dev-vpc",
            "private_ip_google_access": false,
            "project": "spark-cluster1-256809",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-cluster1-256809/regions/asia-east2/subnetworks/spark-cluster-dev-public-net"
          }
        }
      ]
    }
  ]
}